<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_dados_quiz_correcao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MontarPerfil" >

        <TextView
            android:id="@+id/tv_bem_vindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv_msg_primeiro_acesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/primeiro_acesso"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_perfil_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bt_imagem_usuario"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/transparent"
                android:onClick="selecionarImagem"
                android:scaleType="centerCrop"
                android:src="@drawable/userbadge" />

            <TextView
                android:id="@+id/tv_escolher_foto"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/toque_imagem"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_nome_apelido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/nome_apelido"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_nome_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textCapWords" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/bt_criar_perfil"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="criarPerfil"
                android:text="@string/bt_criar_prefil" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
